new DNS settings

--- a/index.njk
+++ b/index.njk
@@ -57,7 +57,7 @@ permalink:
   </details>
 
   <h2>Opengraph Image</h2>
-  {% set ogUrl %}https://v1.opengraph-image.11ty.dev/{{ eleventy.serverless.query.url | urlencode }}/medium/{% endset %}
+  {% set ogUrl %}https://v1.opengraph.11ty.dev/{{ eleventy.serverless.query.url | urlencode }}/medium/{% endset %}
   <p>
     <code>{{ ogUrl }}</code>
   </p>
