Adds sparkline values

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -14,7 +14,7 @@
 			font-family: inherit;
 		}
 		input {
-			min-width: 25em;
+			min-width: 18em;
 		}
 		details {
 			margin-bottom: 2em;
@@ -25,6 +25,17 @@
 		}
 		summary {
 			margin-bottom: .5em;
+		}
+		p:last-child {
+			margin-bottom: 0;
+		}
+		form {
+			padding: 1em;
+			border: 2px solid #000;
+			border-radius: .3em;
+		}
+		code {
+			word-break: break-all;
 		}
 
 		.header-logo {
