--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -33,6 +33,7 @@
 			padding: 1em;
 			border: 2px solid #000;
 			border-radius: .3em;
+			margin-bottom: 1em;
 		}
 		code {
 			word-break: break-all;
