--- a/index.njk
+++ b/index.njk
@@ -4,7 +4,7 @@ permalink:
   dynamic: "/"
 ---
 <p>
-  Built with <a href="https://www.11ty.dev/docs/plugins/serverless/">Eleventy Serverless</a>.
+  Built with <a href="https://www.11ty.dev/docs/plugins/serverless/">Eleventy Serverless</a>. Save this bookmarklet: <a href="javascript: (function(t){window.location.href=`https://api-explorer.11ty.dev/?url=${encodeURIComponent(window.location.href)}`;})();">Eleventy API Explorer</a>.
 </p>
 
 <form action="/">
