--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<title>Eleventy API Explorer</title>
+		<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.png">
 		<style>
 		body {
 			font-family: system-ui, sans-serif;
